# planetside2-event-client

./: Cargo.toml  README.md
examples/: passing_in_channel.rs  simple.rs
src/: lib.rs
src/census/: mod.rs
src/data/: character.rs  experience.rs  fire_mode.rs  loadout.rs  mod.rs  vehicle.rs
src/event/: mod.rs
src/event/message/: events.rs  mod.rs
