[package]
name = "planetside2_event_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "*", features = ["native-tls"] }
tokio = { version = "*", features = ["full"] }
url = "*"
futures-util = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde-aux = "*"
serde_repr = "*"
num_enum = "*"
reqwest = "*"